# polymarket_caonima

./: Makefile  README.md  pyproject.toml  temp.sql
scripts/: collect_orderbooks.ps1  collect_orderbooks.sh  dev_setup.ps1  dev_setup.sh  export_dataset.ps1  export_dataset.sh  ingest_markets.ps1  ingest_markets.sh  migrate.ps1  migrate.sh  refresh_ended.ps1  run_all_basic.sh  run_collect.sh  run_ingest.sh  track_markets.ps1  track_markets.sh
src/pm/: cli.py  config.py
src/pm/clob/: client.py  collect_books.py
src/pm/db/: __init__.py  connect.py
src/pm/db/migrations/: 001_init.sql  002_indexes.sql  003_features.sql  004_top5_features.sql
src/pm/export/: clean_export.py  corruption_checks.py
src/pm/features/: compute.py  jobs.py
src/pm/gamma/: client.py  ingest.py
src/pm/jobs/: build_features.py  collect_orderbooks.py  export_dataset.py  ingest_markets.py  track_markets.py
src/polymarket_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
